Changed openapi specs and implemented services and controller accordingly
